Add dust effect when landing

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,10 +56,11 @@
     <Compile Include="Assets\Scripts\GenericEnemy.cs" />
     <Compile Include="Assets\Scripts\MusicController.cs" />
     <Compile Include="Assets\Scripts\CharacterMainController.cs" />
+    <Compile Include="Assets\Scripts\Buff.cs" />
     <Compile Include="Assets\Scripts\EnemySpawnController.cs" />
     <Compile Include="Assets\Scripts\SpeedController.cs" />
     <Compile Include="Assets\Scripts\Wolf.cs" />
-    <Compile Include="Assets\Scripts\Buff.cs" />
+    <Compile Include="Assets\Scripts\ParticlesController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
